feat: Add dev config support for secrets management
- Add server.config.dev.json for local development overrides
- Update config-manager to merge dev config with base config
- Remove secrets from main config file
- Add server.config.dev.json to .gitignore
- Add template file for easy setup
- Update build process to copy dev config files
- Configuration loading priority: base → dev → environment variables

--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,6 @@ temp/
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
+
+# Development configuration files (contains secrets)
+server.config.dev.json
