--- a/server/src/config/server.config.json
+++ b/server/src/config/server.config.json
@@ -11,7 +11,7 @@
     "credentials": true
   },
   "session": {
-    "secret": "your-random-256-bit-session-secret-change-this-in-production",
+    "secret": "your-random-256-bit-session-secret-change-this-in-production-replace-with-dev-config",
     "resave": false,
     "saveUninitialized": false,
     "cookieSecure": false
@@ -23,8 +23,8 @@
       "authorizationURL": "https://login.microsoftonline.com/ae5a8cb0-673c-43ba-826c-c2d6c87f2d70/oauth2/v2.0/authorize",
       "tokenURL": "https://login.microsoftonline.com/ae5a8cb0-673c-43ba-826c-c2d6c87f2d70/oauth2/v2.0/token",
       "userInfoURL": "https://graph.microsoft.com/oidc/userinfo",
-      "clientID": "sec",
-      "clientSecret": "sec",
+      "clientID": "fbc70098-07fd-4e49-beda-4ca941cedb87",
+      "clientSecret": "",
       "callbackURL": "http://localhost:3000/auth/callback",
       "scope": "openid profile email"
     }
