--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.18.2",
-    "passport": "^0.7.0",
-    "passport-openidconnect": "^0.1.2"
+    "openid-client": "^5.6.5",
+    "passport": "^0.7.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -26,7 +26,6 @@
     "@types/express-session": "^1.18.2",
     "@types/node": "^20.0.0",
     "@types/passport": "^1.0.17",
-    "@types/passport-openidconnect": "^0.1.3",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.0",
     "typescript": "^5.0.0"
